# MetaPathNet

./: .gitignore  CMakeLists.txt  PathNet_run.py  data_loader.py  dataset.py  mag240m.py  metapathnet.py  metasage.py  rgnn.py  root.py  tmp.py
path_sampler/: CMakeLists.txt  path_sampler.cc
